--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ click==8.1.7
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.0
-cryptography==41.0.3
+cryptography==44.0.1
 cycler==0.12.1
 debugpy==1.8.7
 decorator==5.1.1
@@ -115,7 +115,7 @@ pyasn1_modules==0.4.1
 pycparser==2.22
 pycryptodome==3.20.0
 pydantic==2.8.2
-pydantic_core==2.14.6
+pydantic_core==2.20.1
 pygame==2.5.2
 Pygments==2.18.0
 PyJWT==2.10.1
@@ -126,6 +126,7 @@ python-jose==3.4.0
 python-json-logger==2.0.7
 python-multipart==0.0.20
 pytz==2024.2
+pywin32==306
 pywinpty==2.0.14
 PyYAML==6.0.2
 pyzbar==0.1.9
